--- a/css/style.css
+++ b/css/style.css
@@ -7,15 +7,18 @@
         background: rgb(237, 234, 234);
     }
     .nav {
-        background-color: white!important;
+        /* background-color: white!important; */
+        background-image: url(../images/adelin-preda--tOr_T4qTpQ-unsplash.jpg);
+
     }
     .container-one
      {
         color: white !important;
     }
-    li {
+    li a {
         margin-left: 10px;
         font-weight: bold;
+        color: white !important;
     }
     .tel {
         background-color: rgb(3, 172, 3) ;
@@ -55,7 +58,10 @@
     }
     
     .container-two {
-        height: 30%;
+        height: 35rem;
+        background-image: url(../images/adelin-preda--tOr_T4qTpQ-unsplash.jpg);
+        color: white;
+        padding: 6%;
     }
     .container-two input {
         border-radius: 1.5rem;
@@ -69,6 +75,7 @@
         background-color:  black; 
         border: none;
         margin-top: 1.5rem;
+        margin-bottom: 2rem;
     }
     .container-two h1 {
         font-weight: bold;
@@ -79,34 +86,40 @@
     }
     .container-three {
         height: 25%;
-        background-color: #010b12;
         margin-top: 3%;
         margin-bottom: 3%;
-        color: white !important;
+        color:rgb(235, 3, 3) !important;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }
     .container-four {
         height: 30%;
         margin-bottom: 2rem;
     }
     .container-four .gallery {
-        width: 40%;
+        width: 70%;
         margin-left: 4rem;
+    }
+    .fourone {
+        padding: 5%;
     }
     .desc {
         font-weight: bold;
-        font-size: 1rem;
+        font-size: 1.2rem;
         text-align: center;
+        margin-bottom: 3rem;
     }
     .container-five {
         height: 50%;
-        background-color:black ;
+        /* background-color:black ; */
+        background-image: url(../images/adelin-preda--tOr_T4qTpQ-unsplash.jpg);
     }
     .container-five img {
         width: 60%;
         vertical-align: middle;
     }
     footer {
-        background-color: black;
+        /* background-color: black; */
+        background-image: url(../images/adelin-preda--tOr_T4qTpQ-unsplash.jpg);
     }
     .last a {
         text-decoration: none;
