--- a/css/media.css
+++ b/css/media.css
@@ -5,14 +5,14 @@
     .container-two p {
         font-size: 1rem;
     }
-    .img {
-        padding: 15%;
-    }
     .container-two .au {
         margin-left: 10%;
     }
     footer {
         text-align: center;
+    }
+    .desc {
+        margin-left: 3rem;
     }
 }
 @media (min-width: 375px) and (max-width:768px) {
@@ -21,6 +21,9 @@
     }
     footer {
         text-align: center;
+    }
+    .desc {
+        margin-left: 3.3rem;
     }
 }
 @media (min-width:425px) and (max-width:768px) {
@@ -33,6 +36,9 @@
        footer {
         text-align: center;
     }
+    .desc {
+        margin-left: 3rem;
+    }
 }
 
 @media (min-width:768px) and (max-width:1024px) {
@@ -41,5 +47,8 @@
     }
     footer {
         text-align: center;
+    }
+    .desc {
+        margin-left: 3rem;
     }
 }
